--- a/pardus-not-defteri/index.html
+++ b/pardus-not-defteri/index.html
@@ -16,23 +16,29 @@
         /* Custom scrollbar for WebKit browsers */
         .scrollbar-thin {
             scrollbar-width: thin; /* For Firefox */
-            scrollbar-color: #a0aec0 #edf2f7; /* thumb and track color for Firefox */
+            scrollbar-color: #4b5563 #1f2937; /* thumb and track color for Firefox (dark theme) */
         }
         .scrollbar-thin::-webkit-scrollbar {
             width: 8px;
             height: 8px;
         }
         .scrollbar-thin::-webkit-scrollbar-track {
-            background: transparent; /* or #edf2f7 or #f7fafc */
+            background: transparent; 
         }
         .scrollbar-thin::-webkit-scrollbar-thumb {
-            background-color: #a0aec0; /* slate-400 */
+            background-color: #4b5563; /* gray-600 */
             border-radius: 10px;
-            border: 2px solid transparent; /* or match track color if track has a color */
+            border: 2px solid transparent; 
             background-clip: content-box;
         }
         .scrollbar-thin::-webkit-scrollbar-thumb:hover {
-            background-color: #718096; /* slate-500 */
+            background-color: #6b7280; /* gray-500 */
+        }
+
+        .gradient-text {
+            background-clip: text;
+            -webkit-background-clip: text;
+            color: transparent;
         }
     </style>
     <script>
@@ -58,7 +64,7 @@
 </script>
 <link rel="stylesheet" href="/index.css">
 </head>
-<body class="bg-gradient-to-br from-slate-100 via-gray-100 to-slate-200 text-slate-900">
+<body class="bg-gradient-to-br from-slate-900 via-purple-900 to-indigo-900 text-slate-100">
     <noscript>Bu uygulamayı çalıştırmak için JavaScript'i etkinleştirmeniz gerekir.</noscript>
     <div id="root"></div>
     <script type="module" src="/index.tsx"></script>
