--- a/pardusrun-dashboard/index.html
+++ b/pardusrun-dashboard/index.html
@@ -65,8 +65,8 @@
   </script>
 <link rel="stylesheet" href="/index.css">
 </head>
-<body class="text-gray-700"> {/* Default text color for the body */}
-    <main id="root" class="app-main-container"></main> {/* Changed div to main for semantics */}
+<body class="text-gray-700"> 
+    <main id="root" class="app-main-container"></main> 
     <script type="module" src="/index.tsx"></script>
 </body>
 </html>
